# evolutionary-layering-in-complex-systems-mcp

./: .gitignore  IMPROVEMENTS.md  QUICKSTART.md  README.md  debug_roles.py  example_mcp_config.json  pyproject.toml  requirements.txt  simple_library_test.py  test_library_system.py
docs/philosophical-analysis/: systematic-analysis.md
docs/technical-specifications/: architecture.md
elcs_framework/: __init__.py  simple_example.py  swarm_intelligence_demo.py  validate_implementation.py
elcs_framework/core/: __init__.py
elcs_framework/core/dynamic_emergence_networks/: __init__.py  den_core.py
elcs_framework/core/multi_agent_swarm/: __init__.py
prompts/: elcs_tools_guide.md
src/: __init__.py
src/enhanced_elcs_mcp/: __about__.py  __init__.py  server.py
src/enhanced_elcs_mcp/core/: __init__.py  framework_manager.py  swarm_library.py
src/enhanced_elcs_mcp/resources/: __init__.py
swarm_library/indexes/: metadata_index.json
swarm_library/swarms/exploration_swarm_01/: emergence_analysis.json  metadata.json  simulation_results.json  swarm_config.json
swarm_library/swarms/research_swarm_01/: emergence_analysis.json  metadata.json  simulation_results.json  swarm_config.json
