[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elcs-mcp-server"
version = "1.0.0"
description = "MCP server exposing ELCS Framework capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "numpy>=1.24.0",
  "networkx>=3.0",
  "matplotlib>=3.7.0",
  "scipy>=1.10.0",
  "pandas>=2.0.0",
  "seaborn>=0.12.0",
  "plotly>=5.15.0",
  "pydantic>=2.0.0",
  "aiofiles>=23.0.0",
  "jsonschema>=4.0.0",
  "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/enhanced_elcs_mcp", "elcs_framework"]
